<resources>
    <string name="app_name">Cellfire</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_scan">Scan</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="action_edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offer_clip_unclipped">Clip Coupon</string>
    <string name="offer_clip_clipped">Clipped</string>
    <string name="offer_clip_success">Offer successfully clipped. You can now view this offer in the "Clipped Offers" Tab.</string>
    <string name="offer_clip_error">Connection error. Unable to clip the offer.</string>
    <string name="offer_clip_retry">RETRY</string>
    <string name="saved_offers_empty">Start saving by clipping offers in the \"RETAILER OFFERS\" tab.</string>
    <string name="edittext_phone_number_hint">Phone</string>
    <string name="edittext_dob_hint">Date Of Birth</string>
    <string name="button_login">Login</string>
    <string name="button_login_signup">OR SIGN UP</string>
    <string name="edittext_email_hint">Email Address</string>
    <string name="edittext_zipcode_hint">Zip Code</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="offer_alerts">Offer Alerts (Optional)</string>
    <string name="offer_email_alerts">Send me new offer alerts via email</string>
    <string name="offer_text_alerts">Send me occasional updates via text message (max 3x/month). Standard carrier fees will apply. You can cancel or opt out any time by texting stop to 22888</string>
    <string name="register">REGISTER</string>
    <string name="terms_of_service">TERMS OF SERVICE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="email_error">Please enter a valid Email Address</string>
    <string name="phone_error">Please enter a valid Phone Number</string>
    <string name="dob_error">Please enter a valid DOB</string>
    <string name="zip_error">Please enter a valid zip code</string>
    <string name="pref_key_phone">pref_phone</string>
    <string name="pref_key_dob">pref_dob</string>
    <string name="pref_key_gender">pref_gender</string>
    <string name="pref_key_email">pref_email</string>
    <string name="pref_key_expiration">pref_expiration</string>
    <string name="pref_key_new_offers">pref_new_offers</string>
    <string name="pref_key_store_alerts">pref_store_alerts</string>
    <string name="preference_category_general">GENERAL</string>
    <string name="pref_phone_title">Phone Number</string>
    <string name="pref_dob_title">Year of Birth</string>
    <string name="pref_gender_title">Gender</string>
    <string-array name="preference_gender_entries">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="preference_gender_values">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="pref_email_title">Email</string>
    <string name="pref_email_dialog_title">Email Address</string>
    <string name="preference_category_notifications">NOTIFICATION</string>
    <string name="pref_expiration_title">Expiration Reminder</string>
    <string name="pref_expiration_summary">Get notified when offers are about to expire.</string>
    <string-array name="preference_expiration_entries">
        <item>1 day before</item>
        <item>2 days before</item>
        <item>3 days before</item>
        <item>No reminder</item>
    </string-array>
    <string-array name="preference_expiration_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>0</item>
    </string-array>
    <string name="pref_new_offers_title">New Offers</string>
    <string name="pref_new_offers_summary">Get notified when offers are available</string>
    <string name="preference_category_alerts">ALERTS</string>
    <string name="pref_store_alerts_title">Store Alerts</string>
    <string-array name="preference_store_alert_entries">
        <item>All coupons</item>
        <item>Saved coupons only</item>
        <item>Off</item>
    </string-array>
    <string-array name="preference_store_alert_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_store_alerts_summary">Reminds you to check coupons when you enter your selected grocery stores.</string>
    <string name="pref_email_alerts_title">Email Alerts</string>
    <string name="pref_email_alerts_summary">Send me new offer alerts via email.</string>
    <string name="pref_text_alerts_title">Text Alerts</string>
    <string name="pref_text_alerts_summary">Send me occasioanl updates via text message (max 3x/month). Standard carrier fees will apply. You can cancel or opt out any time by texting STOP to 22888</string>
    <string name="preference_activity_title">Settings</string>
</resources>