<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/action_scan"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_accept_white"
        android:title="@string/action_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/ic_action_cancel_white"
        android:title="@string/action_discard"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_cancel_white"
        android:title="@string/action_edit"
        app:showAsAction="always" />
</menu>
